--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,5 +1,7 @@
 ---
 # vars file for yq
+yq_os: '{{ ansible_system | lower }}'
+yq_arch: '{{ yq_arch_map[ansible_architecture] }}'
 yq_platform: '{{ yq_os }}_{{ yq_arch }}'
 yq_url: '{{ yq_mirror }}/v{{ yq_ver }}/yq_{{ yq_platform }}'
 yq_checksum: '{{ yq_checksums[yq_ver][yq_platform] }}'
